Add timestamps to RAWR enqueue output.

--- a/templates/default/tilequeue-logging.conf.erb
+++ b/templates/default/tilequeue-logging.conf.erb
@@ -49,7 +49,7 @@ propagate=0
 
 [logger_rawr_enqueue]
 level=INFO
-handlers=consoleHandler
+handlers=consoleTimestampHandler
 qualName=rawr_enqueue
 propagate=0
 
